<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calmdarya"
    tools:context=".Registrarse">

    <Button
        android:id="@+id/btn_registrarme_cancelar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/boton_Reg_Cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/btn_registrarse_registrarme"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/btn_registrarse_registrarme"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/boton_Reg_Registrarme"
        app:layout_constraintEnd_toStartOf="@+id/btn_registrarme_cancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <EditText
        android:id="@+id/editText_Reg_Usuario"
        android:layout_width="323dp"
        android:layout_height="58dp"
        android:layout_marginTop="228dp"
        android:background="@drawable/rounded_corners_edittextview_login"
        android:ems="10"
        android:hint="Usuario"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColor="@color/black_SmoothCriminal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText_Reg_CorreoElectronico"
        android:layout_width="323dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corners_edittextview_login"
        android:ems="10"
        android:hint="@string/textView_Reg_Correo"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColor="@color/black_SmoothCriminal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Reg_Usuario" />

    <EditText
        android:id="@+id/editText_Reg_Contraseña"
        android:layout_width="323dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corners_edittextview_login"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/black_SmoothCriminal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Reg_CorreoElectronico"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="@string/textView_Reg_Instrucciones"
        android:textColor="@color/white_Wannabe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Reg_YaCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/textView_Reg_Información"
        android:textColor="@color/white_Wannabe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrarse_registrarme" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="136dp" />

    <Button
        android:id="@+id/button_Reg_SelectorPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/rounded_circle_selectphoto"
        android:text="Selecciona Foto"
        app:layout_constraintBottom_toTopOf="@+id/editText_Reg_Usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle_Reg_PhotoView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_Reg_Usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346" />

</androidx.constraintlayout.widget.ConstraintLayout>