<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calmdarya"
    tools:context=".PaginaPrincipal">



    <FrameLayout
        android:id="@+id/contenedor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/calmdarya">


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="118dp"
                android:layout_height="0dp"
                android:background="@color/purple_danceTheNightAway"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="186dp"
                android:layout_height="61dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.928"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logoprincipal" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="left" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="left" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="119dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView_PagPrin_ImagenPerfil"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="104dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.549"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/textView_PagPrin_Bienvenido"
                android:textColor="@color/white_Wannabe"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/imageView_PagPrin_ImagenPerfil" />

            <TextView
                android:id="@+id/textView_PagPrin_NombreUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/textView_PagPrin_Usuario"
                android:textColor="@color/white_Wannabe"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_PagPrin_EstadoConexion"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.463"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/textView_PagPrin_Estado"
                android:textColor="@color/white_Wannabe"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/textView_PagPrin_NombreUsuario" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="73dp"
                android:layout_height="659dp"
                android:background="@drawable/galaxiaflip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView4" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView_PagPrin_EstadoUsuario"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="216dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.695"
                app:layout_constraintStart_toStartOf="@+id/imageView_PagPrin_ImagenPerfil"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/minavigation"

        android:layout_width="189dp"
        android:layout_height="658dp"
        android:layout_gravity="start"
        android:background="@color/purple_danceTheNightAway"

        app:itemIconSize="30dp"
        app:itemIconTint="@color/white_Wannabe"
        app:itemTextAppearance="@style/TextAppearance.AppCompat.Body1"
        app:itemTextColor="@color/white_Wannabe"
        app:menu="@menu/menu_pagina_principal"
        tools:layout_editor_absoluteY="1dp" />

</androidx.drawerlayout.widget.DrawerLayout>
